[package]
name = "vibequest-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3"
mongodb = { version = "3.4.1", features = ["rustls-tls"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
ring = "0.17.14"
p256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
vercel_runtime = { version = "2.4.0", features = ["axum"] }

[[bin]]
name = "index"
path = "api/index.rs"
